--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
         exclude module: 'guava'
     }
 
-    compile 'com.github.cruciblemc:BlackMagic:1.0'
+    shade 'com.github.cruciblemc:BlackMagic:1.0'
 
     compileOnly fileTree(dir: 'lib', include: ['*.jar'])
 }
