--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,18 @@
 buildscript {
     repositories {
-        mavenCentral()
         jcenter()
         maven {
             name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
+            url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'idea'
+apply plugin: 'maven'
 
 group = 'io.github.crucible'
 version = '1.0.2a'
@@ -28,9 +23,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 minecraft {
-    version = "1.7.10-10.13.4.1614-1.7.10"
-    //mappings = "stable_12"
-    runDir = "minecraft"
+    version = "1.12.2-14.23.4.2705"
+    runDir = "run"
+
+    mappings = "snapshot_20171212"
+    makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 configurations {
@@ -100,9 +97,7 @@ jar {
 
 }
 
-reobf {
-    addExtraSrgFile project.mixinSrg
-}
+
 
 compileJava {
     options.compilerArgs += [
@@ -113,11 +108,3 @@ compileJava {
     ]
 }
 
-task copySrgs(type: Copy, dependsOn: 'genSrgs') {
-    from plugins.getPlugin("forge").delayedFile('{SRG_DIR}')
-
-    include '**/*.srg'
-    into 'build/srgs'
-}
-
-compileJava.dependsOn copySrgs
