Update sponge version to 8-SNAPSHOT to make it compatible with other Sponge-based Coremods.

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'idea'
 apply plugin: 'maven'
 
 group = 'io.github.crucible'
-version = '1.0.2a'
+version = '1.12.2-1.0.3a'
 
 archivesBaseName = "[0]Grimoire"
 
@@ -44,7 +44,7 @@ repositories {
 }
 
 dependencies {
-    shade("org.spongepowered:mixin:0.7.11-SNAPSHOT") {
+    shade("org.spongepowered:mixin:0.8-SNAPSHOT") {
         exclude module: "launchwrapper"
         exclude module: 'guava'
     }
@@ -96,8 +96,6 @@ jar {
     }
 
 }
-
-
 
 compileJava {
     options.compilerArgs += [
