--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        mavenLocal()
         jcenter()
         maven {
             name = "forge"
@@ -16,7 +17,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-1.0.0-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-1.2.0-SNAPSHOT'
     }
 }
 
@@ -24,7 +25,7 @@ apply plugin: 'forge'
 apply plugin: 'idea'
 
 group = 'io.github.crucible'
-version = '2.0.0'
+version = '2.1.0'
 
 archivesBaseName = "Grimoire"
 
@@ -55,6 +56,7 @@ dependencies {
         exclude module: "launchwrapper"
         exclude module: 'guava'
     }
+	annotationProcessor("org.spongepowered:mixin:0.7.11-SNAPSHOT")
 }
 
 processResources {
