--- a/Grimoire-mc1.12/build.gradle
+++ b/Grimoire-mc1.12/build.gradle
@@ -95,7 +95,7 @@ jar {
                 "Implementation-Version": "${project.version}",
                 "Implementation-Vendor" :"Grimoire",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                'FMLCorePlugin': "io.github.crucible.grimoire.GrimoireCoremod",
+                'FMLCorePlugin': "io.github.crucible.grimoire.mc1_12.GrimoireCoremod",
                 'FMLCorePluginContainsFMLMod': 'true',
                 "ForceLoadAsMod": "true",
                 'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker'
