--- a/Grimoire-shared/build.gradle
+++ b/Grimoire-shared/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     implementation("org.spongepowered:mixin:0.7.11-SNAPSHOT")
     implementation("org.apache.logging.log4j:log4j-api:2.0-beta9")
+    implementation("commons-codec:commons-codec:1.9")
     implementation('org.jetbrains:annotations:20.1.0')
     compile('net.minecraft:launchwrapper:1.11') {
         exclude module: 'lwjgl'
