--- a/Grimoire-mc1.12/build.gradle
+++ b/Grimoire-mc1.12/build.gradle
@@ -11,21 +11,18 @@ buildscript {
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
-apply plugin: "com.github.johnrengelman.shadow"
 project.evaluationDependsOn(":Grimoire-shared")
-// Force java 8 features
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
-// All files should be UTF-8
-compileJava.options.encoding = 'UTF-8'
-archivesBaseName = "Grimoire-mc1.12"
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+
+archivesBaseName = "Grimoire-mc1.12.2"
 
 minecraft {
     mappings channel: 'snapshot', version: '20171003-1.12'
@@ -43,23 +40,19 @@ repositories {
 }
 
 dependencies {
-    shadow("org.spongepowered:mixin:0.8.3-SNAPSHOT") {
-        exclude module: "asm-commons"
-        exclude module: "asm-tree"
-        exclude module: "launchwrapper"
-        exclude module: "guava"
-        exclude module: "log4j-core"
-        exclude module: "gson"
-        exclude module: "commons-io"
-    }
-    shadow(project(':Grimoire-shared'))
-    annotationProcessor("org.spongepowered:mixin:0.8.3-SNAPSHOT:processor")
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2855'
+	
+    implementation("org.spongepowered:mixin:0.8.3-SNAPSHOT")
+    annotationProcessor("org.spongepowered:mixin:0.8.3-SNAPSHOT:processor")
+	implementation(project(':Grimoire-shared'))
+	implementation('org.jetbrains:annotations:20.1.0')
     implementation name: "EventHelper-1.12.2-2.8.1-dummydev"
 }
 
 mixin {
     disableAnnotationProcessorCheck()
+	
+	add sourceSets.main, "grimoire.refmap.json"
 }
 
 //sourceSets {
@@ -88,9 +81,10 @@ processResources {
 
 }
 
-jar {
-    manifest {
-        attributes([
+tasks.withType(Jar) {
+	if (name.equals('jar') || name.equals('devJar')) {
+		manifest {
+			attributes([
                 "Specification-Title": "io.github.crucible.grimoire",
                 "Specification-Vendor": "Grimoire",
                 "Specification-Version": "1", // We are version 1 of ourselves
@@ -102,17 +96,78 @@ jar {
                 'FMLCorePluginContainsFMLMod': 'true',
                 "ForceLoadAsMod": "true",
                 'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker'
-        ])
-    }
+			])
+		}
+	}
 }
 
-shadowJar {
-    configurations = [project.configurations.shadow]
-    classifier ""
+jar {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from project(':Grimoire-shared').sourceSets.main.output
+	from zipTree('libs/mixin-0.8.1-SNAPSHOT-REPACK.jar')
+}
+
+task devJar(type: Jar) {
+	archiveClassifier = 'dev'
+	from sourceSets.main.output
+	
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from project(':Grimoire-shared').sourceSets.main.output
+	from zipTree('libs/mixin-0.8.1-SNAPSHOT-REPACK.jar')
+}
+
+task sourcesJar(type: Jar) {
+	archiveClassifier = 'dev-sources'
+	
+	from sourceSets.main.allSource
+	from project(':Grimoire-shared').sourceSets.main.allSource
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	from zipTree('libs/mixin-0.8.1-SNAPSHOT-REPACK-sources.jar')
+}
+
+task apiJar(type: Jar) {
+	archiveClassifier = 'api'
+
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	
+	from(project(':Grimoire-shared').sourceSets.main.output) {
+		include '**/api/**'
+	}	
+	
+	from(sourceSets.main.output) {
+		include '**/api/**'
+	}
+	
+	from(zipTree('libs/mixin-0.8.1-SNAPSHOT-REPACK.jar')) {
+		exclude 'org/spongepowered/asm/launch/MixinBootstrap**'
+		exclude 'org/spongepowered/asm/mixin/Mixins**'
+	}
+}
+
+task apiSourcesJar(type: Jar) {
+	archiveClassifier = 'api-sources'
+
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	
+	from(project(':Grimoire-shared').sourceSets.main.allSource) {
+		include '**/api/**'
+	}	
+	
+	from(sourceSets.main.allSource) {
+		include '**/api/**'
+	}
+	
+	from(zipTree('libs/mixin-0.8.1-SNAPSHOT-REPACK-sources.jar')) {
+		exclude 'org/spongepowered/asm/launch/MixinBootstrap**'
+		exclude 'org/spongepowered/asm/mixin/Mixins**'
+	}
 }
 
 artifacts {
-    archives shadowJar
+	archives devJar
+	archives sourcesJar
+	archives apiJar
+	archives apiSourcesJar
 }
 
 jar.finalizedBy('reobfJar')
