--- a/Grimoire-mc1.12/build.gradle
+++ b/Grimoire-mc1.12/build.gradle
@@ -94,6 +94,7 @@ tasks.withType(Jar) {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                 'FMLCorePlugin': "io.github.crucible.grimoire.mc1_12.GrimoireCoremod",
                 'FMLCorePluginContainsFMLMod': 'true',
+				'IsThatYouGrimoire': "Indeed",
                 "ForceLoadAsMod": "true",
                 'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker'
 			])
