--- a/Grimoire-mc1.7.10/build.gradle
+++ b/Grimoire-mc1.7.10/build.gradle
@@ -94,6 +94,7 @@ tasks.withType(Jar) {
 					"Implementation-Vendor" :"Grimoire",
 					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
 					'FMLCorePlugin': "io.github.crucible.grimoire.mc1_7_10.GrimoireCoremod",
+					'IsThatYouGrimoire': "Indeed",
 					'FMLCorePluginContainsFMLMod': 'true',
 					"ForceLoadAsMod": "true",
 					'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker'
