--- a/Grimoire-mc1.12.2/build.gradle
+++ b/Grimoire-mc1.12.2/build.gradle
@@ -1,9 +1,14 @@
 buildscript {
     repositories {
+        mavenLocal()
         maven { url = 'https://maven.minecraftforge.net/' }
         maven {
             name = 'spongepowered-repo'
             url = 'https://repo.spongepowered.org/repository/maven-public/'
+        }
+        maven {
+            name = "github"
+            url = "https://github.com/juanmuscaria/maven/raw/master"
         }
         jcenter()
         mavenCentral()
@@ -12,17 +17,24 @@ buildscript {
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+		classpath 'com.integral.grimoire:GrimoireShenanigans:[1.1.9,)'
     }
+}
+
+plugins {
+    id "com.jfrog.bintray" version "1.8.4"
 }
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'maven-publish'
+apply plugin: 'grimoire-shenanigans'
 project.evaluationDependsOn(":Grimoire-shared")
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-archivesBaseName = "Grimoire-mc1.12.2"
+archivesBaseName = project.name
 
 minecraft {
     mappings channel: 'snapshot', version: '20171003-1.12'
@@ -163,6 +175,88 @@ task apiSourcesJar(type: Jar) {
 		exclude 'org/spongepowered/asm/mixin/Mixins**'
 	}
 }
+
+publishing {
+    publications {
+        origin(MavenPublication) {
+            from components.java
+
+            pom {
+                artifactId = project.name
+            }
+        }
+		
+		dev(MavenPublication) {
+            artifact devJar {
+				classifier = ""
+			}
+			
+			artifact sourcesJar {
+				classifier = "sources"
+			}
+
+            pom {
+                artifactId = project.name + "-dev"
+            }
+        }
+		
+		api(MavenPublication) {
+            artifact apiJar {
+				classifier = ""
+			}
+			
+			artifact apiSourcesJar {
+				classifier = "sources"
+			}
+
+            pom {
+                artifactId = project.name + "-api"
+            }
+        }
+		
+		all {
+            pom {
+                name = project.name
+                groupId = project.group
+                version = project.version
+                description = 'The almighty Grimoire framework'
+                url = 'https://github.com/CrucibleMC/Grimoire'
+
+                issueManagement {
+                    system = 'github'
+                    url = 'https://github.com/CrucibleMC/Grimoire/issues'
+                }
+
+                developers {
+                    developer {
+                        id = 'CrucibleMC'
+                        name = 'CrucibleMC Team'
+                        roles = ['developer']
+                    }
+                }
+							
+				withXml {
+					Node pomNode = asNode()
+					
+					pomNode.dependencies.'*'.findAll() {
+						it.artifactId.text() == 'forgeSrc' || it.artifactId.text() == 'Grimoire-shared' || it.artifactId.text() == 'mixin-0.7.11-SNAPSHOT-REPACK' || it.artifactId.text() == 'EventHelper-1.12.2-2.8.1-dummydev' || it.artifactId.text() == 'mixin'
+					}.each() {
+						it.parent().remove(it)
+					}
+				}
+            }
+        }
+    }
+    repositories {
+        maven {
+            def releasesRepoUrl = "$buildDir/repos/releases"
+            def snapshotsRepoUrl = "$buildDir/repos/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+        }
+    }
+}
+
+bintrayUpload.dependsOn assemble
 
 artifacts {
 	archives devJar
