Organized imports, added verbose(boolean) to IMixinConfigurationBuilder

--- a/Grimoire-mc1.12.2/build.gradle
+++ b/Grimoire-mc1.12.2/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 mixin {
     disableAnnotationProcessorCheck()
 	
-	add sourceSets.main, "grimoire.refmap.json"
+	add sourceSets.main, mixinRefmapName
 }
 
 //sourceSets {
@@ -121,6 +121,7 @@ jar {
 }
 
 task devJar(type: Jar) {
+	archiveBaseName = project.name + '-dev'
 	archiveClassifier = 'dev'
 	from sourceSets.main.output
 	
@@ -130,6 +131,7 @@ task devJar(type: Jar) {
 }
 
 task sourcesJar(type: Jar) {
+	archiveBaseName = project.name + '-dev'
 	archiveClassifier = 'dev-sources'
 	
 	from sourceSets.main.allSource
@@ -139,6 +141,7 @@ task sourcesJar(type: Jar) {
 }
 
 task apiJar(type: Jar) {
+	archiveBaseName = project.name + '-api'
 	archiveClassifier = 'api'
 
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
@@ -158,6 +161,7 @@ task apiJar(type: Jar) {
 }
 
 task apiSourcesJar(type: Jar) {
+	archiveBaseName = project.name + '-api'
 	archiveClassifier = 'api-sources'
 
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
