--- a/Grimoire-mc1.12.2/gradle.properties
+++ b/Grimoire-mc1.12.2/gradle.properties
@@ -1,3 +1,8 @@
+# General Properties
+
 name=Grimoire-mc1.12.2
+mcVersion=1.12.2
 isGrimoireItself=true
 mixinRefmapName=grimoire.refmap.json
+mixinRepackFile=libs/mixin-0.8.1-SNAPSHOT-REPACK.jar
+mixinRepackFileSources=libs/mixin-0.8.1-SNAPSHOT-REPACK-sources.jar
