--- a/Grimoire-mc1.7.10/build.gradle
+++ b/Grimoire-mc1.7.10/build.gradle
@@ -18,7 +18,7 @@ buildscript {
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-1.4.0-SNAPSHOT'
-		classpath 'com.integral.grimoire:GrimoireShenanigans:[1.2.3,)'
+		classpath 'com.integral.grimoire:GrimoireShenanigans:' + grimoireShenanigansVersion
     }
 }
 
@@ -26,28 +26,19 @@ plugins {
     id "com.jfrog.bintray" version "1.8.4"
 }
 
-apply plugin: 'forge'
+project.evaluationDependsOn(":Grimoire-shared")
 apply plugin: "maven"
 apply plugin: 'maven-publish'
+apply plugin: 'forge'
+apply from: '../artifacts.gradle'
+apply from: '../publish.gradle'
 apply plugin: 'grimoire-shenanigans'
-project.evaluationDependsOn(":Grimoire-shared")
-
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 archivesBaseName = project.name
 
 minecraft {
     version = "1.7.10-10.13.4.1614-1.7.10"
-    //mappings = "stable_12"
     runDir = "minecraft"
-}
-
-repositories {
-	flatDir {
-		dirs 'libs'
-	}
-    mavenCentral()
 }
 
 dependencies {
@@ -57,191 +48,12 @@ dependencies {
     implementation name: "EventHelper-1.7.10-1.13.1-dummydev"
 }
 
-processResources {
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
-
-    from(sourceSets.main.resources.srcDirs) {
-        include "mcmod.info"
-
-        expand "version": project.version, "mcversion": project.minecraft.version
-    }
-
-    from(sourceSets.main.resources.srcDirs) {
-        exclude "mcmod.info"
-    }
-}
-
-
 tasks.withType(Jar) {
 	if (name.equals('jar') || name.equals('devJar')) {
 		manifest {
 			attributes([
-					"Specification-Title": "io.github.crucible.grimoire",
-					"Specification-Vendor": "Grimoire",
-					"Specification-Version": "1", // We are version 1 of ourselves
-					"Implementation-Title": project.name,
-					"Implementation-Version": "${project.version}",
-					"Implementation-Vendor" :"Grimoire",
-					"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-					'FMLCorePlugin': "io.github.crucible.grimoire.mc1_7_10.GrimoireCoremod",
-					'IsThatYouGrimoire': "Indeed",
-					'FMLCorePluginContainsFMLMod': 'true',
-					"ForceLoadAsMod": "true",
-					'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker'
+					'FMLCorePlugin': "io.github.crucible.grimoire.mc1_7_10.GrimoireCoremod"
 			])
 		}
 	}
 }
-
-jar {
-	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    from project(':Grimoire-shared').sourceSets.main.output
-	from zipTree('libs/mixin-0.7.11-SNAPSHOT-REPACK.jar')
-}
-
-task devJar(type: Jar) {
-	archiveBaseName = project.name + '-dev'
-	archiveClassifier = 'dev'
-	from sourceSets.main.output
-	
-	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    from project(':Grimoire-shared').sourceSets.main.output
-	from zipTree('libs/mixin-0.7.11-SNAPSHOT-REPACK.jar')
-}
-
-task sourcesJar(type: Jar) {
-	archiveBaseName = project.name + '-dev'
-	archiveClassifier = 'dev-sources'
-	
-	from sourceSets.main.allSource
-	from project(':Grimoire-shared').sourceSets.main.allSource
-	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-	from zipTree('libs/mixin-0.7.11-SNAPSHOT-REPACK-sources.jar')
-}
-
-task apiJar(type: Jar) {
-	archiveBaseName = project.name + '-api'
-	archiveClassifier = 'api'
-
-	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-	
-	from(project(':Grimoire-shared').sourceSets.main.output) {
-		include '**/api/**'
-	}	
-	
-	from(sourceSets.main.output) {
-		include '**/api/**'
-	}
-	
-	from(zipTree('libs/mixin-0.7.11-SNAPSHOT-REPACK.jar')) {
-		exclude 'org/spongepowered/asm/launch/MixinBootstrap**'
-		exclude 'org/spongepowered/asm/mixin/Mixins**'
-		exclude 'com/google/gson/**'
-		exclude 'org/apache/**'
-	}
-}
-
-task apiSourcesJar(type: Jar) {
-	archiveBaseName = project.name + '-api'
-	archiveClassifier = 'api-sources'
-
-	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-	
-	from(project(':Grimoire-shared').sourceSets.main.allSource) {
-		include '**/api/**'
-	}	
-	
-	from(sourceSets.main.allSource) {
-		include '**/api/**'
-	}
-	
-	from(zipTree('libs/mixin-0.7.11-SNAPSHOT-REPACK-sources.jar')) {
-		exclude 'org/spongepowered/asm/launch/MixinBootstrap**'
-		exclude 'org/spongepowered/asm/mixin/Mixins**'
-		exclude 'com/google/gson/**'
-		exclude 'org/apache/**'
-	}
-}
-
-publishing {
-    publications {
-        origin(MavenPublication) {
-            from components.java
-
-            pom {
-                artifactId = project.name
-            }
-        }
-		
-		dev(MavenPublication) {
-            artifact devJar {
-				classifier = ""
-			}
-			
-			artifact sourcesJar {
-				classifier = "sources"
-			}
-
-            pom {
-                artifactId = project.name + "-dev"
-            }
-        }
-		
-		api(MavenPublication) {
-            artifact apiJar {
-				classifier = ""
-			}
-			
-			artifact apiSourcesJar {
-				classifier = "sources"
-			}
-
-            pom {
-                artifactId = project.name + "-api"
-            }
-        }
-		
-		all {
-            pom {
-                name = project.name
-                groupId = project.group
-                version = project.version
-                description = 'The almighty Grimoire framework'
-                url = 'https://github.com/CrucibleMC/Grimoire'
-
-                issueManagement {
-                    system = 'github'
-                    url = 'https://github.com/CrucibleMC/Grimoire/issues'
-                }
-
-                developers {
-                    developer {
-                        id = 'CrucibleMC'
-                        name = 'CrucibleMC Team'
-                        roles = ['developer']
-                    }
-                }
-							
-				withXml {
-					Node pomNode = asNode()
-					
-					pomNode.dependencies.'*'.findAll() {
-						it.artifactId.text() == 'forgeSrc' || it.artifactId.text() == 'Grimoire-shared' || it.artifactId.text() == 'mixin-0.7.11-SNAPSHOT-REPACK' || it.artifactId.text() == 'EventHelper-1.7.10-1.13.1-dummydev' || it.artifactId.text() == 'mixin'
-					}.each() {
-						it.parent().remove(it)
-					}
-				}
-            }
-        }
-    }
-    repositories {
-        maven {
-            def releasesRepoUrl = "$buildDir/repos/releases"
-            def snapshotsRepoUrl = "$buildDir/repos/snapshots"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-        }
-    }
-}
-
-bintrayUpload.dependsOn assemble
