--- a/Grimoire-mc1.7.10/gradle.properties
+++ b/Grimoire-mc1.7.10/gradle.properties
@@ -1,3 +1,8 @@
+# General Properties
+
 name=Grimoire-mc1.7.10
+mcVersion=1.7.10
 isGrimoireItself=true
 mixinRefmapName=grimoire.refmap.json
+mixinRepackFile=libs/mixin-0.7.11-SNAPSHOT-REPACK.jar
+mixinRepackFileSources=libs/mixin-0.7.11-SNAPSHOT-REPACK-sources.jar
